--- a/play/static/app.css
+++ b/play/static/app.css
@@ -3,18 +3,33 @@ html {
     background: black;
 }
 body {
-    /* height: 100%; */
+    height: 100%;
     background: black;
     color: white;
 }
 
+footer {
+    position:absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+}
+
 .container {
-    height: 100%;
     margin-right: auto;
     margin-left: auto;
     width: 60%;
     margin-top: 20px;
     margin-bottom: 20px;
+    position: relative;
+    height: auto !important;
+    height: 100%;
+    min-height: 100%;
+}
+
+.contents {
+    padding-bottom: 120px;
 }
 
 .control-input{
@@ -53,6 +68,7 @@ label {
 
 #playlist {
     margin-top: 20px;
+    display: inline-block;
 }
 
 #playinput {
