--- a/play/templates/play.html
+++ b/play/templates/play.html
@@ -1,27 +1,30 @@
-{% extends "layout.html" %} {% block content %}
-<div id="player"></div>
-<div id="player-control">
-    <label class="checkbox">
-        <input type="checkbox" id="mute">
-        Mute
-    </label>
-</div>
+{% extends "layout.html" %}
+{% block content %}
+<div class="contents">
+    <div id="player"></div>
+    <div id="player-control">
+        <label class="checkbox">
+            <input type="checkbox" id="mute">
+            Mute
+        </label>
+    </div>
 
-<div id="playlist">
-    <ul id="ul">
-    </ul>
-</div>
+    <div id="playlist">
+        <ul id="ul">
+        </ul>
+    </div>
 
-<div id="playinput" class="field">
-    <div class="control">
-        <div class="control-input">
-            <input class="input is-primary" type="text" id="youtube-url" name="youtube-url" placeholder="Youtube URL">
-        </div>
-        <div class="control-button">
-            <a class="button is-black" id="queue">Queue</a>
+    <div id="playinput" class="field">
+        <div class="control">
+            <div class="control-input">
+                <input class="input is-primary" type="text" id="youtube-url" name="youtube-url" placeholder="Youtube URL">
+            </div>
+            <div class="control-button">
+                <a class="button is-black" id="queue">Queue</a>
+            </div>
         </div>
     </div>
-</div>
 
-<script type="text/javascript" src="/static/play.js"></script>
+    <script type="text/javascript" src="/static/play.js"></script>
+</div>
 {% endblock %}
