--- a/play/templates/index.html
+++ b/play/templates/index.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<p><a href="{{ message }}">{{ message }}</a></p>
+<div class="contents">
+    <p><a href="{{ message }}">{{ message }}</a></p>
+</div>
 {% endblock %}
