--- a/play/templates/index.html
+++ b/play/templates/index.html
@@ -2,5 +2,11 @@
 {% block content %}
 <div class="contents">
     <p><a href="{{ message }}">{{ message }}</a></p>
+    <script type="text/javascript">
+        setTimeout("redirect()", 0);
+        function redirect() {
+            location.href = '/play';
+        }
+    </script>
 </div>
 {% endblock %}
