--- a/play/static/app.css
+++ b/play/static/app.css
@@ -52,7 +52,7 @@ a.is-black {
     border: #00d1b2 1px solid !important;
 }
 
-a.btn-like, a.btn-like:hover {
+a.btn-dope, a.btn-dope:hover {
     background: black;
     border: 1px #888 solid;
     color: white;
