--- a/play/templates/play.html
+++ b/play/templates/play.html
@@ -27,4 +27,7 @@
 
     <script type="text/javascript" src="/static/play.js"></script>
 </div>
+<div id="loading">
+    <img src="/static/loading.gif">
+</div>
 {% endblock %}
