--- a/server/play/static/app.css
+++ b/server/play/static/app.css
@@ -84,6 +84,13 @@ a.btn-dope, a.btn-dope:hover {
     margin-right: 5px;
 }
 
+a.btn-fuck, a.btn-fuck:hover {
+    background: black;
+    border: 1px #333 solid;
+    color: white;
+    text-align: center;
+}
+
 a.disabled {
     pointer-events: none;
     color: #999;
