--- a/server/play/templates/play.html
+++ b/server/play/templates/play.html
@@ -15,6 +15,12 @@
 
     <div class="clear"></div>
 
+    <div class="fuck">
+        <ul>
+            <li><a class="button btn-fuck" onclick="fuck()">fuck</a></li>
+        </ul>
+    </div>
+
     <div id="playlist">
         <ul id="ul">
         </ul>
