--- a/server/play/templates/play.html
+++ b/server/play/templates/play.html
@@ -15,9 +15,9 @@
 
     <div class="clear"></div>
 
-    <div class="fuck">
+    <div class="fuck" align="center">
         <ul>
-            <li><a class="button btn-fuck" onclick="fuck()">fuck</a></li>
+            <li><a class="btn-fuck" onclick="fuck()"><img src="/static/fuck.svg" width="50px" height="50px" /></a></li>
         </ul>
     </div>
 
