--- a/server/play/static/app.css
+++ b/server/play/static/app.css
@@ -58,11 +58,11 @@ footer {
 .platform {
     width: 250px;
     font-size: 15px;
-    background-color: #fff;
+    background-color: #333;
     padding: 20px;
     border-radius: 5px;
     display: inline-block;
-    color: #000;
+    color: #fff;
     margin: 10px;
 }
 
