--- a/server/play/templates/layout.html
+++ b/server/play/templates/layout.html
@@ -16,7 +16,7 @@
             <div class="footer-menu">
                 <a href="/play">Play</a><span class="l"> | </span>
                 <a href="/dope">Dope</a><span class="l"> | </span>
-                <a href="javascript:alert('coming soon')">Fuck</a><span class="l"> | </span>
+                <a href="/fuck">Fuck</a><span class="l"> | </span>
                 <a href="/daily">Daily</a>
             </div>
             <div class="footer-copyright">
