--- a/server/play/templates/list.html
+++ b/server/play/templates/list.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="contents">
+    <h2 class="title is-2">{{ title }}</h2>
     <div id="playlist">
         <ul id="ul">
             {% for l in list %}
