--- a/server/play/templates/play.html
+++ b/server/play/templates/play.html
@@ -4,6 +4,7 @@
     <div id="player"></div>
 
     <div id="player-info">
+        <a class="button btn-dope" onclick="fuck()">Fuck</a>
         <label class="time" id="time" value=""></label>
     </div>
     <div id="player-control">
@@ -14,12 +15,6 @@
     </div>
 
     <div class="clear"></div>
-
-    <div class="fuck" align="center">
-        <ul>
-            <li><a class="btn-fuck" onclick="fuck()"><img src="/static/fuck.svg" width="50px" height="50px" /></a></li>
-        </ul>
-    </div>
 
     <div id="playlist">
         <ul id="ul">
