--- a/server/play/templates/index.html
+++ b/server/play/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="contents">
     <div class="home">
-        <div class="home-title">♫ Play ♫</div>
+        <div class="home-title">Play</div>
         <div class="home-platform">
             <a href="/download/osx">
                 <div class="platform">
@@ -14,6 +14,9 @@
                     Open Play in your browser
                 </div>
             </a>
+        </div>
+        <div class="home-message">
+            your company's dj
         </div>
     </div>
 </div>
