--- a/server/play/templates/layout.html
+++ b/server/play/templates/layout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Play {{ title }}</title>
+<title>Play ♪ {{ title }}</title>
 <link rel="icon" type="image/png" href="/static/play.png">
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="/static/jquery.min.js"></script>
