--- a/server/play/templates/play.html
+++ b/server/play/templates/play.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="contents">
+<div class="contents" style="display:none;">
     <div id="player"></div>
 
     <div id="player-info">
@@ -21,7 +21,7 @@
         </ul>
     </div>
 
-    <div id="playinput" class="field">
+    <div id="playinput" class="field" style="display:none;">
         <div class="control">
             <div class="control-input">
                 <input class="input is-primary" type="text" id="youtube-url" name="youtube-url" placeholder="Youtube URL">
