--- a/server/play/static/app.css
+++ b/server/play/static/app.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
+
 html {
     height: 100%;
     background: black;
@@ -6,6 +8,7 @@ body {
     height: 100%;
     background: black;
     color: white;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
 footer {
@@ -66,8 +69,12 @@ footer {
     margin: 10px;
 }
 
+.home-message{
+    font-size: 20px;
+    margin-top: 90px;
+}
 .control-input{
-    width: calc( 100% - 100px ) ;
+    width: calc( 100% - 80px ) ;
     float: left;
 }
 
@@ -112,10 +119,12 @@ label {
 
 #player-info {
     float: left;
+    margin-top: 10px;
 }
 
 #player-control {
     float: right;
+    margin-top: 6px;
 }
 
 .clear {
