--- a/electron/main.css
+++ b/electron/main.css
@@ -8,14 +8,15 @@ body {
     font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 #mainWebView {
-    height: 100%;
     width: 100%;
+    height: 100%;
 }
 
 #quit {
     position: fixed;
-    bottom: 0px;
     width: 100%;
+    height: 16px;
+    bottom: 0px;
     text-align: center;
     font-size: 13px;
     background: #EEE;
