--- a/server/play/templates/play.html
+++ b/server/play/templates/play.html
@@ -4,7 +4,6 @@
     <div id="player"></div>
 
     <div id="player-info">
-        <a class="button btn-dope" onclick="fuck()">Fuck</a>
         <label class="time" id="time" value=""></label>
     </div>
     <div id="player-control">
@@ -24,10 +23,10 @@
     <div id="playinput" class="field" style="display:none;">
         <div class="control">
             <div class="control-input">
-                <input class="input is-primary" type="text" id="youtube-url" name="youtube-url" placeholder="Youtube URL">
+                <input class="input-youtube-url" type="text" id="youtube-url" name="youtube-url" placeholder="Youtube URL">
             </div>
             <div class="control-button">
-                <a class="button is-black" id="queue">Queue</a>
+                <a class="queue" id="queue">Queue</a>
             </div>
         </div>
     </div>
