--- a/server/play/templates/layout.html
+++ b/server/play/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
 <title>Play ♪ {{ title }}</title>
 <link rel="icon" type="image/png" href="/static/play.png">
-<script src="/static/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/static/app.css">
 <body>
