--- a/play/templates/macos.html
+++ b/play/templates/macos.html
@@ -40,6 +40,8 @@
         delete window.__tempModuleExports__;
       }
     </script>
-    <script src='/static/play.js'></script>
-  </body>
+    <script type="text/javascript" src='/static/macos.js'></script>
+    <script type="text/javascript" src='/static/stream.js'></script>
+    <script type="text/javascript" src='/static/utils.js'></script>
+</body>
 </html>
