--- a/play/templates/play.html
+++ b/play/templates/play.html
@@ -32,6 +32,8 @@
     </div>
 
     <script type="text/javascript" src="/static/play.js"></script>
+    <script type="text/javascript" src="/static/stream.js"></script>
+    <script type="text/javascript" src='/static/utils.js'></script>
 </div>
 <div id="loading">
     <img src="/static/loading.gif">
